Bug 918987 - Implement String.prototype.normalize.  r=jwalden